Added new swim-component-page

--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
-<link rel="import" href="bower_components/iron-component-page/iron-component-page.html">
-<iron-component-page src="bower_components/swim-map/swim-map.html"></iron-component-page>
+<link rel="import" href="bower_components/swim-component-page/swim-component-page">
+<swim-component-page src="bower_components/swim-map/swim-map.html"></swim-component-page>
