--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
-<link rel="import" href="bower_components/swim-component-page/swim-component-page">
+<link rel="import" href="bower_components/swim-component-page/swim-component-page.html">
 <swim-component-page src="bower_components/swim-map/swim-map.html"></swim-component-page>
