Optimized docs into page.

--- a/demo/swim-map_demo.html
+++ b/demo/swim-map_demo.html
@@ -6,28 +6,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
-  <!-- CSS -->
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="../../edge-css/source/edge.css"/>
-  <link rel="stylesheet" href="../../swim-polymer/swim-demo.css"/>
-
+  <link rel="stylesheet"
+        href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet"
+        href="../../edge-css/source/edge.css"/>
+  <link rel="stylesheet"
+        href="../../swim-polymer/swim-demo.css"/>
 
   <script src="../../jquery/dist/jquery.js"></script>
   <script src="../../swim-polymer/swim-clipboard.js"></script>
-
   <script src="../../webcomponentsjs/webcomponents-lite.min.js"></script>
 
-  <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
-
-  <link rel="import" href="../../prism-element/prism-highlighter.html">
-  <link rel="import" href="../../marked-element/marked-element.html">
-  <link rel="import" href="../../paper-card/paper-card.html">
-  <link rel="import" href="../../paper-button/paper-button.html">
-
-  <script src="../../webcomponentsjs/webcomponents-lite.min.js"></script>
-  <link rel="import" href="../../swim-map/swim-map.html">
-
+  <link rel="import"
+        href="../../iron-demo-helpers/demo-pages-shared-styles.html">
+  <link rel="import"
+        href="../../prism-element/prism-highlighter.html">
+  <link rel="import"
+        href="../../marked-element/marked-element.html">
+  <link rel="import"
+        href="../../paper-card/paper-card.html">
+  <link rel="import"
+        href="../../paper-button/paper-button.html">
+  <link rel="import"
+        href="../../swim-map/swim-map.html">
 
 </head>
 
@@ -60,7 +62,9 @@
         <div class="swim-code-block p6 mt12 pos-rel">
 
           <paper-button id="copyClipBtn" class="bd-clipboard pos-abs r12 t12" raised>
-            <span class="btn-clipboard" title="" data-original-title="Copy to clipboard" aria-describedby="tooltip106901">Copy</span>
+            <span class="btn-clipboard"
+                  title="" data-original-title="Copy to clipboard"
+                  aria-describedby="tooltip106901">Copy</span>
           </paper-button>
 
           <marked-element>
@@ -94,7 +98,6 @@
                 </div>
 
               ```
-
             </script>
           </marked-element>
 
@@ -106,11 +109,9 @@
 
   </section>
 
-
 </div>
 
 <script src="../../swim-polymer/swim-demo.js"></script>
-
 
 <script>
 
@@ -118,16 +119,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
